# Swen-deliverables

./: .gitignore  README.md
another_game/: BENCHMARK_RESULTS.md  Cargo.toml
another_game/benches/: speed_race.rs
another_game/src/: lib.rs  main.rs
another_game/tests/: integration_test.rs
counting_rooms/: BENCHMARK_RESULTS.md  Cargo.toml
counting_rooms/benches/: speed_race.rs
counting_rooms/src/: lib.rs  main.rs
counting_rooms/tests/: integration_test.rs
finding_borders/: BENCHMARK_RESULTS.md  Cargo.toml
finding_borders/benches/: speed_race.rs
finding_borders/src/: lib.rs  main.rs
finding_borders/tests/: integration_test.rs
hanoi_solver1/: BENCHMARK_RESULTS.md  Cargo.toml
hanoi_solver1/benches/: speed_race.rs
hanoi_solver1/src/: lib.rs  main.rs
hanoi_solver1/tests/: integration_test.rs
increasing_array/: BENCHMARK_RESULTS.md  Cargo.toml
increasing_array/benches/: speed_race.rs
increasing_array/src/: lib.rs  main.rs
increasing_array/tests/: integration_test.rs
josephus/: BENCHMARK_RESULTS.md  Cargo.toml
josephus/benches/: speed_race.rs
josephus/src/: lib.rs  main.rs
josephus/tests/: integration_test.rs
movie_festival/: BENCHMARK_RESULTS.md  Cargo.toml
movie_festival/benches/: speed_race.rs
movie_festival/src/: lib.rs  main.rs
movie_festival/tests/: integration_test.rs
room_allocation/: BENCHMARK_RESULTS.md  Cargo.toml
room_allocation/benches/: speed_race.rs
room_allocation/src/: lib.rs  main.rs
room_allocation/tests/: integration_test.rs
subordinates/: BENCHMARK_RESULTS.md  Cargo.toml
subordinates/benches/: speed_race.rs
subordinates/src/: lib.rs  main.rs
subordinates/tests/: integration_test.rs
two_sets/: BENCHMARK_RESULTS.md
two_sets/src/: lib.rs  main.rs
two_sets/two_sets/: Cargo.toml
two_sets/two_sets/benches/: speed_race.rs
two_sets/two_sets/tests/: integration_test.rs
