[package]
name = "counting_rooms"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "counting_rooms"
path = "src/main.rs"

[lib]
name = "counting_rooms"
path = "src/lib.rs"

[dependencies]

[[bench]]
name = "speed_race"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }