[package]
name = "finding_borders"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "finding_borders"
path = "src/main.rs"

[lib]
name = "finding_borders"
path = "src/lib.rs"

[dependencies]

[[bench]]
name = "speed_race"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }