[package]
name = "movie_festival"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "movie_festival"
path = "src/main.rs"

[lib]
name = "movie_festival"
path = "src/lib.rs"

[dependencies]

[[bench]]
name = "speed_race"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }