[package]
name = "room_allocation"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "room_allocation"
path = "src/main.rs"

[lib]
name = "room_allocation"
path = "src/lib.rs"

[dependencies]

[[bench]]
name = "speed_race"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }