[package]
name = "subordinates"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "subordinates"
path = "src/main.rs"

[lib]
name = "subordinates"
path = "src/lib.rs"

[dependencies]

[[bench]]
name = "speed_race"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }